--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,14 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           pwd
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.2.1
+  
+        
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.13.1' # The Go version to download (if necessary) and use.
+      - run: go version
+
 
           
