--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '^1.13.1' # The Go version to download (if necessary) and use.
-      - run: go build -o dyno main.go
+      - run: |
+          go build -o dyno main.go
+          dyno -h
 
           
