--- a/action.yml
+++ b/action.yml
@@ -3,5 +3,8 @@ description: 'Interact with Dyno'
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/dyno
-      shell: bash          
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version: '>=1.17.0'
+    - run: go version       
