--- a/action.yml
+++ b/action.yml
@@ -7,5 +7,9 @@ runs:
     - uses: actions/setup-go@v3
       with:
         go-version: '>=1.17.0'
-    - run: go version       
+    - run: echo ${{ github.action_path }}
+      shell: bash
+    - run: go build -o ${{ github.action_path }}/dyno ${{ github.action_path }}/main.go       
+      shell: bash
+    - run: ./${{ github.action_path }}/dyno -h
       shell: bash
