--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,8 @@ runs:
         go-version: '>=1.17.0'
     - run: echo ${{ github.action_path }}
       shell: bash
+    - run: go env -w GO111MODULE=auto
+      shell: bash
     - run: go build -o ${{ github.action_path }}/dyno ${{ github.action_path }}/main.go       
       shell: bash
     - run: .${{ github.action_path }}/dyno -h
