--- a/action.yml
+++ b/action.yml
@@ -7,9 +7,9 @@ runs:
     - uses: actions/setup-go@v3
       with:
         go-version: '>=1.17.0'
-    - run: echo ${{ github.action_path }}
+    - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
     - run: go env -w GO111MODULE=auto
       shell: bash
-    - run: .${{ github.action_path }}/dyno -h
+    - run: ./dyno -h
       shell: bash
