--- a/action.yml
+++ b/action.yml
@@ -7,11 +7,9 @@ runs:
     - uses: actions/setup-go@v3
       with:
         go-version: '>=1.17.0'
-    - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
-      shell: bash
     - run: go env -w GO111MODULE=auto
       shell: bash
-    - run: cat main.go
+    - run: cat ${{ github.action_path }}/main.go
       shell: bash
     - run: cd /usr/local/bin
       shell: bash
