--- a/action.yml
+++ b/action.yml
@@ -11,9 +11,9 @@ runs:
       shell: bash
     - run: cat ${{ github.action_path }}/main.go
       shell: bash
-    - run: echo ${GOPATH}
+    - run: echo ${{ GOPATH }}
       shell: bash
-    - run: echo ${GOROOT}
+    - run: echo ${{ GOROOT }}
       shell: bash      
     - run: cd /usr/local/bin
       shell: bash
