--- a/action.yml
+++ b/action.yml
@@ -4,13 +4,21 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v3
-    - uses: thatisuday/go-cross-build@v1
+    - uses: actions/setup-go@v3
       with:
-          platforms: 'linux/amd64, darwin/amd64, windows/amd64'
-          package: '${{ github.action_path }}'
-          name: 'dyno'
-          compress: 'true'
-          dest: '${{ github.action_path }}'
-          
-      - run: ./dyno -h
-        shell: bash
+        go-version: '>=1.17.0'
+    - name: Get OS and arch info
+      run: |
+        GOOSARCH='linux/amd64'
+        GOOS=${GOOSARCH%/*}
+        GOARCH=${GOOSARCH#*/}
+        BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
+        echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
+        echo "GOOS=$GOOS" >> $GITHUB_ENV
+        echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+      shell: bash
+    - name: Build
+      run: |
+        go build -o "$BINARY_NAME" -v
+        echo $GITHUB_ENV
+      shell: bash
