--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,6 @@ runs:
       shell: bash
     - name: Build
       run: |
-        go build -o "$BINARY_NAME" -v
+        go build -o "$BINARY_NAME" main.go
         echo $GITHUB_ENV
       shell: bash
