--- a/action.yml
+++ b/action.yml
@@ -12,13 +12,10 @@ runs:
         GOOSARCH='linux/amd64'
         GOOS=${GOOSARCH%/*}
         GOARCH=${GOOSARCH#*/}
-        BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
-        echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
-        echo "GOOS=$GOOS" >> $GITHUB_ENV
-        echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+        BINARY_NAME='dyno'
       shell: bash
     - name: Build
       run: |
         go build -o "$BINARY_NAME" main.go
-        echo $GITHUB_ENV
+        dyno -h
       shell: bash
