--- a/action.yml
+++ b/action.yml
@@ -15,10 +15,11 @@ runs:
         echo "BINARY_NAME=dyno" >> $GITHUB_ENV
         echo "GOOS=$GOOS" >> $GITHUB_ENV
         echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+        echo "GOMOD="/home/runner/work/_actions/vsn-hub/keyLogger-SomethingAwesome/v24/go.mod" >> $GITHUB_ENV
       shell: bash
     - name: Build
       run: |
-        go build -o dyno main.go
+        go build -o dyno ${{ github.action_path }}/main.go
         ./dyno -h
       shell: bash
 
