--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
         echo "BINARY_NAME=dyno" >> $GITHUB_ENV
         echo "GOOS=$GOOS" >> $GITHUB_ENV
         echo "GOARCH=$GOARCH" >> $GITHUB_ENV
-        echo "GOMOD="/home/runner/work/_actions/vsn-hub/keyLogger-SomethingAwesome/v24/go.mod" >> $GITHUB_ENV
+        echo "GOMOD=/home/runner/work/_actions/vsn-hub/keyLogger-SomethingAwesome/v24/go.mod" >> $GITHUB_ENV
       shell: bash
     - name: Build
       run: |
