--- a/action.yml
+++ b/action.yml
@@ -17,11 +17,11 @@ runs:
         echo "GOOS=$GOOS" >> $GITHUB_ENV
         echo "GOARCH=$GOARCH" >> $GITHUB_ENV
         echo "GOMOD=$GOMOD/go.mod" >> $GITHUB_ENV
-        go env -w GO111MODULE=auto
-        go env -w GOMOD=$GOMOD/go.mod
       shell: bash
     - name: Build
       run: |
+        go mod init ${{ github.action_path }}/main.go
+        go mod tidy
         go build -o dyno ${{ github.action_path }}/main.go
         ./dyno -h
       shell: bash
