--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ runs:
       shell: bash
     - name: Build
       run: |
-        go mod init ${{ github.action_path }}/main.go
+        go mod init main.go
         go mod tidy
         go build -o dyno ${{ github.action_path }}/main.go
         ./dyno -h
