--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,7 @@ runs:
     - uses: actions/setup-go@v3
       with:
         go-version: '>=1.17.0'
+        go-version-file: '${{ github.action_path }}/go.mod'
     - name: Get OS and arch info
       run: |
         GOOSARCH='linux/amd64'
@@ -20,9 +21,6 @@ runs:
       shell: bash
     - name: Build
       run: |
-        go mod init main.go
-        go get github.com/alexflint/go-arg
-        go mod tidy
         go build -o dyno ${{ github.action_path }}/main.go
         ./dyno -h
       shell: bash
